OO-3621: user can order its list of binders (tools and D&D), in the list it can export its binders, edit the metadata, trash, delete and restore them